2002-09-16  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* smtpd.tcl: fixed bug #609835 to cope with multiple addresses in
	MAIL and RCPT commands without raising exception.
	
2002-04-10  Andreas Kupries <andreas_kupries@users.sourceforge.net>

	* smtpd.man: Added doctools manpage.

2001-12-10  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* smtpd.tcl (smtpd::gmtoffset): Fixed for cases where the hour
	offset is invalid.

2001-11-19  Andreas Kupries <andreas_kupries@users.sourceforge.net>

	* Moved example.tcl to the standard location in
	  'tcllib/examples/smtpd'. Also renamed it to "tk_smtpd".

2001-11-06  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* smtpd.tcl: Tcl SMTP server package.
	* smtpd.n: Manual page for the Tcl SMTP server.
	* example.tcl: Simple demo of server use and authentication.
